# gemini-search-mcp

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mcp_server.py  pyproject.toml
gemini_search/: engine.py  server.py
gemini_search_mcp/: __init__.py
google_ai_mode/: __init__.py  engine.py  protocol.py  server.py
google_ai_mode_mcp/: __init__.py  __main__.py
scripts/: uc_google_probe.py  windows_chrome_profile_probe.py
