[project]
name = "google-ai-mode"
version = "0.3.0"
description = "Reverse-proxy Google Search AI Mode as OpenAI-compatible API and MCP server — unlimited, no rate limit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.44",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "mcp[cli]>=1.0",
]

[project.scripts]
google-ai-mode = "google_ai_mode.server:main"
google-ai-mode-mcp = "google_ai_mode_mcp:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
